[form-builder] Add babel-config for test env

--- a/packages/@sanity/form-builder/.babelrc
+++ b/packages/@sanity/form-builder/.babelrc
@@ -1,3 +1,8 @@
 {
-  presets: ['@babel/preset-react', '@babel/preset-flow']
+  "presets": ["@babel/preset-react", "@babel/preset-flow"],
+  "env": {
+    "test": {
+      "plugins": ["transform-es2015-modules-commonjs"]
+    }
+  }
 }
