[form-builder] Add chai-exclude (and chai) to better test the block editor patching

--- a/packages/@sanity/form-builder/package.json
+++ b/packages/@sanity/form-builder/package.json
@@ -83,6 +83,8 @@
     "@sanity/plugin-loader": "0.136.0",
     "@sanity/server": "0.136.0",
     "assert": "^1.4.1",
+    "chai": "^4.2.0",
+    "chai-exclude": "^1.0.9",
     "flow-typed": "^2.2.3",
     "in-publish": "^2.0.0",
     "jest": "^22.4.2",
