--- a/packages/@sanity/block-tools/package.json
+++ b/packages/@sanity/block-tools/package.json
@@ -32,8 +32,8 @@
     "assert": "^1.4.1",
     "in-publish": "^2.0.0",
     "jest": "^23.6.0",
-    "jsdom": "^11.3.0",
-    "xpath": "^0.0.24"
+    "jsdom": "^12.0.0",
+    "xpath": "0.0.27"
   },
   "directories": {
     "test": "test"
