--- a/packages/@sanity/block-tools/package.json
+++ b/packages/@sanity/block-tools/package.json
@@ -31,9 +31,9 @@
     "@sanity/schema": "0.134.0",
     "assert": "^1.4.1",
     "in-publish": "^2.0.0",
-    "jest": "^22.4.3",
-    "jsdom": "^11.3.0",
-    "xpath": "^0.0.24"
+    "jest": "^23.6.0",
+    "jsdom": "^12.0.0",
+    "xpath": "0.0.27"
   },
   "directories": {
     "test": "test"
