--- a/packages/@sanity/form-builder/package.json
+++ b/packages/@sanity/form-builder/package.json
@@ -63,11 +63,11 @@
     "react-datepicker": "^1.8.0",
     "rxjs": "^6.1.0",
     "shallow-equals": "^1.0.0",
-    "slate": "0.42.2",
-    "slate-base64-serializer": "^0.2.72",
+    "slate": "0.42.6",
+    "slate-base64-serializer": "0.2.76",
     "slate-hotkeys": "^0.1.1",
     "slate-insert-block-on-enter": "^0.3.0",
-    "slate-react": "^0.19.3",
+    "slate-react": "^0.19.8",
     "slate-soft-break": "^0.9.0",
     "speakingurl": "^13.0.0"
   },
