--- a/packages/@sanity/form-builder/package.json
+++ b/packages/@sanity/form-builder/package.json
@@ -45,6 +45,7 @@
     "attr-accept": "^1.1.0",
     "canvas-to-blob": "^0.0.0",
     "classnames": "^2.2.5",
+    "diff-match-patch": "^1.0.0",
     "date-fns": "^1.29.0",
     "debug": "^3.1.0",
     "exif-component": "^1.0.1",
