--- a/packages/@sanity/form-builder/.babelrc
+++ b/packages/@sanity/form-builder/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["@babel/preset-react", "@babel/preset-flow"],
   "env": {
     "test": {
-      "plugins": ["transform-es2015-modules-commonjs"]
+      "plugins": ["transform-es2015-modules-commonjs", "@babel/plugin-proposal-class-properties"]
     }
   }
 }
